bug #6: "fix" dropdown spacing, attempt to fix video tools dropdowns.
* standardize on 0px of explicit space between the label and the select.
  this results in chrome-mac being a bit too widely spaced, but it looks
  fine in firefox at least, so it seems like a reasonable tradeoff.
* the video toolbar at the top is a bit more complicated; the background
  is semitransparent, to let the video show through a bit. theoretically
  any browser that doesn't support the transparent background setting
  should then fall back on the #242424 rule and ignore the transparent
  rule. but i suspect chrome-linux /thinks/ it /does/ support the rule
  and might try to do it anyway, which would nullify this fix. in which
  case the best thing i can think of is to get rid of the transparency.

--- a/project/src/styles.sass
+++ b/project/src/styles.sass
@@ -306,6 +306,7 @@ html, body
       margin-right: 0
 
   select
+    background: #242424
     background: transparent
     border: none
     color: #fff
@@ -490,7 +491,7 @@ html, body
 
     label
       font-weight: normal
-      margin-right: -8px
+      margin-right: 0
       position: relative
 
     select
